@@ -1,4 +1,3 @@
-
 Mutex still locked at thread exit: mutex 0x........, recursion count 1, owner 3.
    at 0x........: pthread_join (drd_pthread_intercepts.c:?)
    by 0x........: main (tc22_exit_w_lock.c:43)
@@ -7,5 +6,3 @@ mutex 0x........ was first observed at:
    by 0x........: child_fn1 (tc22_exit_w_lock.c:18)
    by 0x........: vgDrd_thread_wrapper (drd_pthread_intercepts.c:?)
 
-
-ERROR SUMMARY: 1 errors from 1 contexts (suppressed: 0 from 0)
